# Flux

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SAFETY.md  demo.sh
benches/: bench_extreme.rs  bench_extreme_batching.rs  bench_flux.rs  bench_macos_optimized.rs  bench_macos_ultra_optimized.rs  bench_profile_analysis.rs  bench_realistic_measurement.rs  bench_ringbuffer_comparison.rs  bench_ringbuffer_multithreaded.rs  bench_simd_copy.rs  bench_simple.rs  bench_transport_comparison.rs  bench_verified_multithread.rs  flux_bench.rs  macos_ultra_bench.rs  simple_bench.rs  ultra_performance_bench.rs
docs/: architecture.md  getting-started.md  linux_optimizations.md  macos_optimizations.md  performance-analysis.md  performance-summary.md  performance.md  platform-setup.md  technical-analysis.md
examples/: basic_usage.rs  consolidated_optimization_demo.rs  example_basic_usage.rs  example_extreme_batching.rs  example_linux_optimized.rs  example_minimal_raw.rs  example_mpmc_average.rs  example_optimized_copy_reliable_udp.rs  example_reliable_udp_average.rs  example_reliable_udp_batch_average.rs  example_reliable_udp_transport.rs  example_spsc_average.rs  example_udp_average.rs  example_udp_transport.rs  fec_library_test.rs  linux_ultra_bench.rs  realistic_high_throughput.rs  reliable_udp_example.rs  udp_transport.rs  ultimate_throughput_test.rs
ext-benches/: .gitignore  README.md
ext-benches/aeron-java-bench/: AeronBench.java  AeronMulticast.java  pom.xml
ext-benches/disruptor-java-bench/: pom.xml
ext-benches/disruptor-rs-bench/: Cargo.toml
flux/: Cargo.toml  README.md
flux-ipc/: Cargo.toml  README.md
flux-ipc/benches/: bench_ipc.rs  bench_trace_events.rs
flux-ipc/src/: lib.rs
flux-rudp/: Cargo.toml  README.md
flux-rudp/benches/: bench_rudp.rs  bench_trace_events.rs
flux-rudp/examples/: example_reliable_udp_client.rs  example_reliable_udp_server.rs
flux-rudp/src/: lib.rs  reliable_window_ring_buffer.rs  sendmmsg.rs
flux-test-support/: Cargo.toml  README.md
flux-test-support/src/: chaos.rs  lib.rs  loss.rs  stress.rs  verify.rs
flux-test-support/tests/: core_ordering_tests.rs  ipc_stress_tests.rs  rudp_loss_tests.rs  rudp_stress_tests.rs
flux/benches/: bench_all_slots.rs  bench_criterion.rs  bench_fast.rs  bench_fast_slots_macro.rs  bench_macros.rs  bench_mapped_vs_heap.rs  bench_message_slot.rs  bench_minimal.rs  bench_spmc_mpmc.rs  bench_spsc.rs  bench_spsc_api.rs  bench_spsc_macro.rs  bench_trace_events.rs  bench_verify.rs  bench_verify_messageslot.rs
flux/docs/: ARCHITECTURE.md  DESIGN.md  RELEASE_CHECKLIST.md
flux/examples/: benchmark_slots.rs  mpmc_basic.rs  mpsc_basic.rs  spmc_basic.rs  spsc_basic.rs  spsc_macro.rs  spsc_message.rs
flux/src/: constants.rs  cpu.rs  crc32.rs  error.rs  lib.rs
fuzzy/: Cargo.toml
fuzzy/src/: test_utils.rs
fuzzy/tests/: fuzz_nak_drop_first.rs  fuzz_nak_minimal.rs  fuzz_nak_random_drop.rs  test_nak_drop_first.rs  test_nak_minimal.rs
kaos/: Cargo.toml  README.md
kaos-archive/: Cargo.toml  README.md
kaos-archive/benches/: bench_archive.rs
kaos-archive/src/: lib.rs
kaos-driver/: Cargo.toml  Dockerfile  Dockerfile.xdp  LINUX.md  XDP_PLAN.md  docker-compose-xdp.yml  docker-compose.yml
kaos-driver/examples/: bench.rs  bench_multicast.rs  bench_rudp.rs  bench_sizes.rs  bench_xdp.rs  multicast.rs
kaos-driver/scripts/: test-xdp.sh
kaos-driver/src/: main.rs  uring.rs  xdp.rs
kaos-ipc/: Cargo.toml  README.md
kaos-ipc/benches/: bench_ipc.rs  bench_trace_events.rs
kaos-ipc/src/: lib.rs
kaos-rudp/: Cargo.toml  README.md
kaos-rudp/benches/: bench_rudp.rs  bench_trace_events.rs
kaos-rudp/examples/: bench_driver.rs  example_reliable_udp_client.rs  example_reliable_udp_server.rs  multicast.rs  multicast_bench.rs  rudp_bench.rs
kaos-rudp/src/: congestion.rs  driver.rs  lib.rs  multicast.rs  reliable_window_ring_buffer.rs  sendmmsg.rs  window.rs
kaos-test-support/: Cargo.toml  README.md
kaos-test-support/src/: chaos.rs  lib.rs  loss.rs  stress.rs  verify.rs
kaos-test-support/tests/: core_ordering_tests.rs  ipc_stress.rs  ipc_stress_tests.rs  rudp_loss_tests.rs  rudp_stress_tests.rs
kaos/benches/: bench_all_slots.rs  bench_api.rs  bench_closure.rs  bench_core.rs  bench_criterion.rs  bench_fast.rs  bench_fast_slots_macro.rs  bench_macros.rs  bench_mapped_vs_heap.rs  bench_message_slot.rs  bench_minimal.rs  bench_patterns.rs  bench_slots.rs  bench_spmc_mpmc.rs  bench_spsc.rs  bench_spsc_api.rs  bench_spsc_macro.rs  bench_trace.rs  bench_trace_events.rs  bench_verify.rs  bench_verify_messageslot.rs
kaos/docs/: ARCHITECTURE.md  DESIGN.md  PROFILING.md  RELEASE_CHECKLIST.md  ROADMAP.md  UNSAFE.md
kaos/examples/: benchmark_slots.rs  mpmc_basic.rs  mpsc_basic.rs  profile.rs  spmc_basic.rs  spsc_basic.rs  spsc_macro.rs  spsc_message.rs
kaos/src/: constants.rs  error.rs  insights.rs  lib.rs  metrics.rs
kaos/src/disruptor/: common.rs  completion.rs  completion_tracker.rs  ipc.rs  macros.rs  message_slot.rs  mod.rs  multi.rs  ring_buffer_core.rs  single.rs  slots.rs
kaos/src/disruptor/mpmc/: mod.rs  mpmc_ring_buffer.rs
kaos/src/disruptor/mpsc/: mod.rs  mpsc_consumer.rs  mpsc_producer.rs  mpsc_ring_buffer.rs
kaos/src/disruptor/spmc/: mod.rs  spmc_ring_buffer.rs
kaos/src/disruptor/spsc/: consumer.rs  message_ring_buffer.rs  mod.rs  producer.rs  ring_buffer.rs  shared_ring_buffer.rs
kaos/tests/: loom_ring_buffer.rs
src/: constants.rs  error.rs  lib.rs  main.rs
src/disruptor/: consumer.rs  message_slot.rs  mod.rs  producer.rs  ring_buffer.rs  ring_buffer_linux.rs  wait_strategy.rs
src/monitoring/: mod.rs
src/optimizations/: advanced_simd.rs  linux_optimizations.rs  memory_pool.rs  mod.rs
src/performance/: mod.rs
src/platform/: mod.rs
src/reliability/: mod.rs
src/transport/: kernel_bypass_zero_copy.rs  mod.rs  optimized_copy.rs  reliable_udp.rs  unified.rs  zero_copy_udp.rs
src/utils/: checksum.rs  cpu.rs  cpu_simple.rs  linux_numa.rs  macos_optimizations.rs  memory.rs  mod.rs  neon_simd.rs  numa.rs  optimizations.rs  time.rs
(+45 files in other folders)
