[package]
name = "flux"
version = "0.1.0"
edition = "2021"
authors = ["Bug the System <bug.the.system.dev@gmail.com>"]
description = "High-performance message transport library implementing LMAX Disruptor patterns"
license = "MIT OR Apache-2.0"
keywords = ["high-performance", "messaging", "zero-copy", "disruptor"]
categories = ["network-programming", "concurrency"]
repository = "https://github.com/bugthesystem/flux"

[dependencies]
# Core async runtime and I/O
monoio = { version = "0.2", optional = true }
io-uring = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# Concurrency and data structures
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
crc32fast = "1.3"

# System level optimizations
memmap2 = "0.9"
nix = { version = "0.30", features = ["sched", "process"] }
libc = "0.2"
libnuma-sys = { version = "0.0.9", optional = true }

# Monitoring and metrics
hdrhistogram = "7.5"
cpu-time = "1.0"
sysinfo = "0.36"

# Error handling and logging
thiserror = "2.0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing and benchmarking
criterion = { version = "0.6", optional = true }
proptest = { version = "1.0", optional = true }
static_assertions = "1.1"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"

[features]
default = ["std"]
std = []
tokio-runtime = ["tokio"]
benchmarks = ["criterion"]
property-tests = ["proptest"]
io-uring = ["dep:monoio", "dep:io-uring"]
skip_checksum_in_memory = []

# Linux-specific optimizations
linux_numa = ["dep:libnuma-sys"]
linux_hugepages = []
linux_affinity = []
linux_io_uring = ["dep:monoio", "dep:io-uring"]
linux_dpdk = []
linux_optimized = ["linux_numa", "linux_hugepages", "linux_affinity", "linux_io_uring"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = true

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "bench_flux"
path = "benches/bench_flux.rs"
harness = false

[[bench]]
name = "bench_simple"
path = "benches/bench_simple.rs"
harness = false

[[bin]]
name = "bench_extreme"
path = "benches/bench_extreme.rs"

[[bin]]
name = "bench_macos_optimized"
path = "benches/bench_macos_optimized.rs"

[[bin]]
name = "bench_profile_analysis"
path = "benches/bench_profile_analysis.rs"

[[bin]]
name = "bench_extreme_batching"
path = "benches/bench_extreme_batching.rs"

[[bin]]
name = "bench_transport_comparison"
path = "benches/bench_transport_comparison.rs"

[[bin]]
name = "bench_ringbuffer_comparison"
path = "benches/bench_ringbuffer_comparison.rs"

[[bin]]
name = "bench_ringbuffer_multithreaded"
path = "benches/bench_ringbuffer_multithreaded.rs"

[[bin]]
name = "bench_realistic_measurement"
path = "benches/bench_realistic_measurement.rs"

[[bin]]
name = "bench_verified_multithread"
path = "benches/bench_verified_multithread.rs"

[[example]]
name = "example_basic_usage"
path = "examples/example_basic_usage.rs"

[[example]]
name = "example_udp_transport"
path = "examples/example_udp_transport.rs"

[[example]]
name = "example_minimal_raw"
path = "examples/example_minimal_raw.rs"

[[example]]
name = "example_linux_optimized"
path = "examples/example_linux_optimized.rs"

[[example]]
name = "example_optimized_copy_reliable_udp"
path = "examples/example_optimized_copy_reliable_udp.rs"

[[example]]
name = "fec_library_test"
path = "examples/fec_library_test.rs"

 