[package]
name = "kaos-archive"
version = "0.1.0"
edition = "2021"
description = "High-performance message archive for Kaos"

[dependencies]
kaos = { path = "../kaos" }
memmap2 = "0.9"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "bench_archive"
harness = false

