[package]
name = "kaos-driver"
version = "0.1.0"
edition = "2021"
description = "Media driver for kaos IPC - offloads network I/O from apps"

[dependencies]
kaos = { path = "../kaos" }
kaos-ipc = { path = "../kaos-ipc" }
kaos-rudp = { path = "../kaos-rudp", optional = true }
ctrlc = "3.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
io-uring = { version = "0.7", optional = true }
xsk-rs = { version = "0.6", optional = true }

[features]
default = []
uring = ["io-uring"]
reliable = ["kaos-rudp"]
xdp = ["xsk-rs"]
tracing = ["kaos/tracing", "kaos-ipc/tracing", "kaos-rudp?/tracing"]
tracy = ["kaos/tracy", "kaos-ipc/tracy", "kaos-rudp?/tracy"]
