[package]
name = "kaos-ipc"
version = "0.1.0-preview"
edition = "2021"
authors = ["Bug the System <bug.the.system.dev@gmail.com>"]
description = "High-performance inter-process communication using shared memory ring buffers"
license = "MIT OR Apache-2.0"
keywords = ["ipc", "shared-memory", "ring-buffer", "high-performance", "zero-copy"]
categories = ["concurrency", "memory-management"]
readme = "README.md"
repository = "https://github.com/bugthesystem/kaos"

[dependencies]
kaos = { path = "../kaos" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_ipc"
harness = false
