[package]
name = "kaos"
version = "0.1.0-preview"
edition = "2021"
authors = ["Bug the System <bug.the.system.dev@gmail.com>"]
description = "Lock-free ring buffer implementing LMAX Disruptor pattern"
license = "MIT OR Apache-2.0"
keywords = ["disruptor", "lock-free", "ring-buffer", "concurrency"]
categories = ["concurrency", "data-structures"]
repository = "https://github.com/bugthesystem/kaos"
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
parking_lot = "0.12"
libc = "0.2"
crc32fast = "1.3"
thiserror = "2.0.1"
bytemuck = { version = "1.14", features = ["derive"] }

[features]
default = []
unsafe-perf = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

# ============================================================================
# Benchmarks
# ============================================================================

[[bench]]
name = "bench_core"
harness = false

[[bench]]
name = "bench_slots"
harness = false

[[bench]]
name = "bench_patterns"
harness = false

[[bench]]
name = "bench_api"
harness = false

[[bench]]
name = "bench_verify"
harness = false

[[bench]]
name = "bench_trace"
harness = false

# ============================================================================
# Examples
# ============================================================================

[[example]]
name = "spsc_basic"

[[example]]
name = "spsc_message"

[[example]]
name = "spsc_macro"

[[example]]
name = "mpsc_basic"

[[example]]
name = "spmc_basic"

[[example]]
name = "mpmc_basic"

[[example]]
name = "benchmark_slots"
